fix too much padding between tag lists

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -397,10 +397,6 @@ ul.log-in {
     &:first-of-type {
       margin-top: 16px;
     }
-
-    &:last-of-type {
-      margin-bottom: 16px;
-    }
   }
 
   .tag-name {
